docker-vim/go: update software package index is too slow in China Fix issue: #3
Signed-off-by: liuxiaodong <1091665839@qq.com>

--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -8,6 +8,8 @@ RUN apt-get update -y && \
 COPY .vim ~/
 COPY .vimrc ~/
 
+ADD sources.list /etc/apt/
+
 ENV GOPROXY https://goproxy.cn
 
 CMD ["bash"]
