--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -1,11 +1,11 @@
 FROM golang:latest
 
 RUN apt-get update -y && \
-  apt-get install -y vim \
+  apt-get install -y vim && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* 
 
-COPY .vim ~/
-COPY .vimrc ~/
+ADD .vim/ /root/.vim
+COPY .vimrc /root/
 
 CMD ["bash"]
